@@ -11,14 +11,20 @@ if (window.layoutTestController) {
 
 function test() {
     // Test for select that's not inside a form element
-    var ctrl = document.getElementById('control');
-    ctrl.focus();
+    var ctrl1 = document.getElementById('control1');
+    ctrl1.focus();
 
     if (window.layoutTestController) {
         // change the option selection
-        eventSender.keyDown("e", null);
-        eventSender.keyDown("\r", null);
+        eventSender.keyDown("e", []);
     }
+    // hit enter
+    var enterEvent = document.createEvent("KeyboardEvents");
+    enterEvent.initKeyboardEvent("keypress", true, false, window, "Enter", 0, false, false, false, false, false);
+    ctrl1.dispatchEvent(enterEvent);
+    // Change focus to trigger the "Enter" press.
+    var ctrl2 = document.getElementById('control2');
+    ctrl2.focus();
 }
 
 function onpopup() {
@@ -31,14 +37,14 @@ function onpopup() {
 </script>
 </head>
 <body onload="test()">
-<select onchange="onpopup()" id="control"><option value="0">abcd</option><option value="0">efgh</option></select>
+<select onchange="onpopup()" id="control1"><option value="0">abcd</option><option value="0">efgh</option></select>
 If the pop-up was not blocked then there will be an PASS message. Otherwise, the test fails.
-<form id="form" action="data:text/html,<script>alert('PASSED')</script>" target="_blank">
-<input type="submit" value="Submit to new window"/>
+<form id="form" action="data:text/html,<script>alert('PASSED')</script>" target="target">
+<input id="control2" type="submit" value="Submit to new window"/>
 </form>
 <form id="form2" action="data:text/html,<b>hello!</b><script>window.layoutTestController && layoutTestController.notifyDone()</script>" target="panel">
 <input type="submit" value="Submit local page Javascript"/>
 </form>
-<iframe id="panel"></iframe>
+<iframe id="target"></iframe><iframe id="panel"></iframe>
 </body>
 </html>
