@@ -1,3 +1,12 @@
+2010-06-28  Johnny Ding  <jnd@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        https://bugs.webkit.org/show_bug.cgi?id=41061
+        Make the test work on both Mac and Linux.
+
+        * fast/events/popup-when-select-change.html:
+
 2010-06-28  Kent Tamura  <tkent@chromium.org>
 
         Unreviewed, test expectation update.
